fixed logo on mobile -- fixed

--- a/app/components/HeroSlider/slider.css
+++ b/app/components/HeroSlider/slider.css
@@ -14,7 +14,7 @@
 
   @media screen and (max-width: 600px) {
     .mySwiper {
-      height: 800px;
+      height: 667px;
     }
     
   }
